--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,13 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
- 
+
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>tape</artifactId>
